--- a/app/assets/stylesheets/site.scss
+++ b/app/assets/stylesheets/site.scss
@@ -7,6 +7,15 @@
   margin-bottom: 24px;
 }
 
+.foot-lead {
+  font-size: 14px;
+  .monospaced {
+    font-family: monospace !important;
+  }
+  margin: 30px 0 18px 0;
+  opacity: 0.6;
+}
+
 .year {
   margin-bottom: 24px;
   width: 80%;
