--- a/app/views/notary/index.html.erb
+++ b/app/views/notary/index.html.erb
@@ -7,9 +7,13 @@
     <h1>Notary Data Analysis</h1>
     <p class="lead">
       A basic quantitative analysis was made of the <b>Brazilian Notary Public Office</b> <em>death certificate</em> numbers
-      with hopes of gaining insight into how much the pandemic is causing <b>excess deaths</b>.
+      with hopes of gaining insight into how much the pandemic is causing <b>excess deaths</b>*.
     </p>
 
+    <p class="foot-lead">
+      * Since the <b>year 2022</b> is not over yet, we must reach a few months inside <b>2023</b> to have
+      an accurate picture of its all-cause deaths.
+    </p>
     <br/>
     <br/>
   </div>
