Fix grammar notary report

--- a/app/views/notary/index.html.erb
+++ b/app/views/notary/index.html.erb
@@ -11,7 +11,7 @@
     </p>
 
     <p class="foot-lead">
-      * Since the <b>year 2022</b> is not over yet, we must reach a few months inside <b>2023</b> to have
+      * Since the <b>year 2022</b> is not over yet, we must reach a few months into <b>2023</b> to have
       an accurate picture of its all-cause deaths.
     </p>
     <br/>
