Add CRUD of Notary Records

--- a/app/views/admin/shared/_header.html.erb
+++ b/app/views/admin/shared/_header.html.erb
@@ -30,6 +30,11 @@
               <%= t 'menu.srags' %>
             </a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="<%= admin_notary_records_path %>">
+              <%= t 'menu.notary_records' %>
+            </a>
+          </li>
         </ul>
 
         <div class="d-flex">
