Add CRUD of Access Codes

--- a/app/views/admin/shared/_header.html.erb
+++ b/app/views/admin/shared/_header.html.erb
@@ -35,6 +35,11 @@
               <%= t 'menu.notary_records' %>
             </a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="<%= admin_access_codes_path %>">
+              <%= t 'menu.access_codes' %>
+            </a>
+          </li>
         </ul>
 
         <div class="d-flex">
