--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -57,7 +57,7 @@
 </div>
 
 <div class="row">
-  <% [2021, 2022].each do |year| %>
+  <% [2021, 2022, 2023].each do |year| %>
   <div class="col col-md-6 col-12">
     <div class="year">
       <h2 class="title">Year <%= year %></h2>
