Better term than correlation to avoid mislead

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -315,7 +315,7 @@
       </div>
 
       <div class="section">
-        <h5 class="title">Correlation with Vaccination (Deaths, Hospitalization, ICUs) <i><%= year %></i></h5>
+        <h5 class="title">Relationship with Vaccination (Deaths, Hospitalization, ICUs) <i><%= year %></i></h5>
         <div id="correlation-<%= year %>" class="graph-canvas"></div>
         <script type="text/javascript">
           new Morris.Line({
@@ -345,7 +345,7 @@
       </div>
 
       <div class="section">
-        <h5 class="title">Correlation with Full Vaccination (Two-Shots-Deaths, Hospitalization and ICUs) <i><%= year %></i></h5>
+        <h5 class="title">Relationship with Full Vaccination (Two-Shots-Deaths, Hospitalization and ICUs) <i><%= year %></i></h5>
         <div id="correlation-full-<%= year %>" class="graph-canvas"></div>
         <script type="text/javascript">
           new Morris.Line({
